fix alignment of bullet-closed

--- a/solarized.css
+++ b/solarized.css
@@ -398,8 +398,8 @@ html[data-theme=light] {
     height: 6px;
     border-radius: 50%;
     position: relative;
-    margin-right: 6px;
-    right: -3px;
+    margin-right: 10px;
+    right: -4px;
 }
 .ls-block .bullet-container.bullet-closed::before {
     content: "\f621";
@@ -420,7 +420,7 @@ html[data-theme=light] {
     height: 6px;
     border-radius: 50%;
     position:relative;
-    right: -3px;
+    right: -4px;
 }
 .ls-block:not(:focus-within) .bullet-container.bullet-closed::before {
     content: "\f621";
